java chinese iter_0