@@ -1,29 +1,20 @@
 public class CharUtils {
-    
-    private static final Character[] cache = new Character[128];
-
-    static {
-        for (int i = 0; i < cache.length; i++) {
-            cache[i] = (char) i;
-        }
-    }
-
     /**
-     * <p>Converts the character to a Character.</p> <p>For ASCII 7 bit characters, this uses a cache that will return the same Character object each time.</p> <pre> CharUtils.toCharacterObject(' ')  = ' ' CharUtils.toCharacterObject('A')  = 'A' </pre>
-     * @param ch  the character to convert
-     * @return a Character of the specified character
+     * <p>将字符转换为 Character 对象。</p> <p>对于 ASCII 7 位字符，此方法使用缓存，每次调用都会返回相同的 Character 对象。</p> <pre> CharUtils.toCharacterObject(' ')  = ' ' CharUtils.toCharacterObject('A')  = 'A' </pre>
+     * @param ch  要转换的字符
+     * @return 指定字符的 Character 对象
      */
     public static Character toCharacterObject(final char ch) {
-        if (ch >= 0 && ch < 128) {
-            return cache[ch];
+        if (ch >= 0 && ch <= 127) {
+            return Character.valueOf(ch);
         }
-        return Character.valueOf(ch);
+        return new Character(ch);
     }
 
     public static void main(String[] args) {
         System.out.println(toCharacterObject(' ')); // Output: ' '
         System.out.println(toCharacterObject('A')); // Output: 'A'
         System.out.println(toCharacterObject('Z')); // Output: 'Z'
-        System.out.println(toCharacterObject((char) 128)); // Output: (Character for ASCII 128)
+        System.out.println(toCharacterObject('a')); // Output: 'a'
     }
 }
